still working on layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ html {
   background-repeat: no-repeat;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 body::before {
@@ -49,6 +49,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity here */
   z-index: -1; /* Stays behind all other content */
 }
@@ -77,14 +78,6 @@ body::before {
   background-color: transparent;
   border: none;
   margin-left: 1rem;
-}
-
-.layout-wrapper {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  /* padding: 1rem; */
-  flex: 1;
 }
 
 @media only screen and (max-width: 450px) {
