--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -3,10 +3,11 @@
   top: 0;
   display: flex;
   place-content: center;
-  width: 100vw;
+  width: 100%;
   height: 2rem;
   padding: 2.8rem 0;
   z-index: 1000;
+  overflow-x: hidden;
 }
 .header::before {
   content: "";
